...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" verticalCompressionResistancePriority="752" text="Task Overall" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qny-9e-sHq">
                                <rect key="frame" x="5" y="10" width="98.5" height="21.5"/>
                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="Zup-Tk-Gbx">
                                <rect key="frame" x="20" y="35.5" width="280" height="213"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="270" id="A0P-Gg-WXH"/>
                                    <constraint firstAttribute="height" constant="200" id="es5-56-ZrW"/>
                                </constraints>
                                <variation key="default">
...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="k58-2Y-CZM" id="rph-9K-WSq"/>
                            <outlet property="delegate" destination="k58-2Y-CZM" id="0bI-n5-lLd"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Developers" id="vgV-3W-7sc">
                        <barButtonItem key="leftBarButtonItem" title="Enroll" id="TVI-sq-PJP">
                            <connections>
                                <segue destination="oTn-OK-3Kb" kind="show" identifier="EnrollDeveloper" id="01u-6O-Jcd"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="og5-Uq-riI">
...
                        </sections>
                        <connections>
                            <outlet property="dataSource" destination="erI-NS-qJj" id="gyQ-C6-gbK"/>
                            <outlet property="delegate" destination="erI-NS-qJj" id="Noo-c0-7Nf"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="New" largeTitleDisplayMode="never" id="fXZ-IJ-jYt">
                        <barButtonItem key="rightBarButtonItem" systemItem="done" id="rJp-H7-ouz">
                            <connections>
                                <action selector="doneButtonTapped:" destination="erI-NS-qJj" id="X84-Rh-qUP"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
            <point key="canvasLocation" x="1920" y="75"/>
        </scene>
        <!--About us-->
        <scene sceneID="Xut-Kc-0v3">
            <objects>
                <navigationController id="6bT-4g-Sf9" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="About us" image="About us" selectedImage="About us Selected" id="T8v-o1-H9r"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="XDN-6S-weW">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="91"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <connections>
                        <segue destination="k58-2Y-CZM" kind="relationship" relationship="rootViewController" id="o4B-Bx-anT"/>
...
